<resources>
    <string name="app_name">NOW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtdelivery_to">Giao hàng đến:</string>
    <string name="txtaddress">Địa chỉ</string>
    <string name="txtsearchBar">Tìm kiếm địa chỉ, món ăn, thức uống ...</string>
    <string name="txtCollection">Bộ sưu tập</string>
    <string name="txtNoComment">Không ai "bình luận" hết vậy ta?</string>
    <string name="txtOrderNow">Đặt món ngay và cho quán vào đánh giá xịn xịn bạn nhé!</string>
    <string name="txtdelivery">Giao hàng</string>
    <string name="txtMe">Tôi</string>
    <string name="txt_voucher">Ví Voucher</string>
    <string name="txt_shopee_xu">Shopee Xu</string>
    <string name="txt_payment">Thanh toán</string>
    <string name="txt_location">Địa chỉ</string>
    <string name="txt_invite_friend">Mời bạn bè</string>
    <string name="txt_help">Trung tâm trợ giúp</string>
    <string name="txt_seller_app">Ứng dụng cho chủ quán</string>
    <string name="txt_policy">Chính sách quy định</string>
    <string name="txt_setting">Cài đặt</string>
    <string name="txt_about">Về Now</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_name">Họ tên</string>
    <string name="txt_phone">Số điện thoại</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_email">Email</string>
    <string name="txt_repassword">Nhập lại mật khẩu</string>
    <string name="txt_register">Đăng ký</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_cate">Danh mục</string>
    <string name="txt_average_price">Giá trung bình</string>
    <string name="txt_open_time">Giờ mở cửa</string>
    <string name="txt_confirm_order">Xác nhận đơn hàng</string>
    <string name="txt_shop_name">shop name</string>
    <string name="txt_food_name">Food name</string>
    <string name="txt_shipping_fee">Phí giao hàng</string>
    <string name="txt_total">Tổng cộng</string>
    <string name="txt_note">Ghi chú</string>
    <string name="txt_done">Hoàn tất</string>
    <string name="txt_complete">Hoàn thành</string>
    <string name="txt_shipping">Giao hàng</string>
    <string name="txt_add_address">Thêm địa chỉ mới</string>
    <string name="txt_order_detail">Chi tiết đơn hàng</string>
    <string name="txt_delivery_to">Giao đến</string>
    <string name="txt_tota">Tổng</string>
    <string name="txt_rating">Đánh giá</string>
    <string name="txt_user_profile">Hồ sơ cá nhân</string>
    <string name="txt_change">Thay đổi</string>
    <string name="txt_sex">Giới tính</string>
    <string name="txt_birth">Ngày sinh</string>
    <string name="txt_change_password">Thay đổi mật khẩu</string>
    <string name="txt_save">Lưu</string>
</resources>