<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    style="@style/MainTheme.MaxWidth">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/MainTheme.MaxScreen"
        android:background="@color/gray_1"
        android:orientation="vertical"
        tools:context=".View.UserView.UserFragment">

        <LinearLayout
            style="@style/MainTheme.MaxWidth"
            android:orientation="vertical">

            <TextView
                style="@style/MainTheme.Title"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="0dp"
                android:text="@string/txtMe"
                android:textSize="18sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/user" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="15dp"
                android:background="@drawable/background_btnprimary"
                android:paddingHorizontal="10dp"
                android:text="Đăng nhập / Đăng ký"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>
            <TextView
                android:id="@+id/userName"
                android:gravity="center"
                android:visibility="gone"
                android:paddingStart="0dp"
                style="@style/MainTheme.Title"/>
        </LinearLayout>

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/txt_voucher"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_voucher" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_shopee_xu"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_dollar" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_payment"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_payment" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_location"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_location_black" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/txt_invite_friend"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_user_small" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_help"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_help" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/txt_seller_app"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_seller" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/txt_policy"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_policy" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_setting"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_settings" />

        <TextView
            style="@style/MainTheme.MaxWidth.TextNormal"
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:text="@string/txt_about"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_info" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/background_btnlogout"
            android:layout_margin="10dp"
            android:text="@string/txt_logout"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>