<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainTheme.MaxScreen"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/MainTheme.MaxWidth">

        <TextView
            android:id="@+id/toolbar"
            style="@style/MainTheme.Title"
            android:gravity="center"
            android:text="@string/txt_user_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/MainTheme"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/blockAvatar"
        style="@style/MainTheme.MaxWidth"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangeimg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_btnlogout"
            android:text="@string/txt_change"
            android:textAllCaps="false"
            android:textColor="@color/primary_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockUsername"
        style="@style/MainTheme.MaxWidth"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/MainTheme.TextNormal"
            android:text="@string/txt_name" />

        <TextView
            android:id="@+id/name"
            style="@style/MainTheme.TextNormal"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/txt_name"
            app:drawableEndCompat="@drawable/ic_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockPhone"
        style="@style/MainTheme.MaxWidth"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/MainTheme.TextNormal"
            android:text="@string/txt_phone" />

        <TextView
            android:id="@+id/phone"
            style="@style/MainTheme.TextNormal"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:gravity="end"
            android:text="@string/txt_phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_profile_block_sex"
        style="@style/MainTheme.MaxWidth"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/MainTheme.TextNormal"
            android:text="@string/txt_sex" />

        <TextView
            android:id="@+id/sex"
            style="@style/MainTheme.TextNormal"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/txt_sex"
            app:drawableEndCompat="@drawable/ic_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockBirth"
        style="@style/MainTheme.MaxWidth"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/MainTheme.TextNormal"
            android:text="@string/txt_birth" />

        <TextView
            android:id="@+id/birth"
            style="@style/MainTheme.TextNormal"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/txt_birth"
            app:drawableEndCompat="@drawable/ic_next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_email"
        style="@style/MainTheme.MaxWidth"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/MainTheme.TextNormal"
            android:text="@string/txt_email" />

        <TextView
            android:id="@+id/email"
            style="@style/MainTheme.TextNormal"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/txt_email"
            app:drawableEndCompat="@drawable/ic_next" />
    </LinearLayout>

    <TextView
        android:id="@+id/changePassword"
        style="@style/MainTheme.TextNormal"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/txt_change_password"
        app:drawableEndCompat="@drawable/ic_next" />
    <Button
        android:id="@+id/btnSave"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/background_btnprimary"
        android:text="@string/txt_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>