<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blockItem"
    style="@style/MainTheme.MaxWidth"
    android:layout_marginTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/type"
        style="@style/MainTheme.Title"
        android:text="@string/txtaddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        style="@style/MainTheme.TextSmall"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="10dp"
        android:text="@string/txtaddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/name"
        style="@style/MainTheme.TextNormal"
        android:paddingStart="10dp"
        android:text="@string/txt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <TextView
        android:id="@+id/phone"
        style="@style/MainTheme.TextNormal"
        android:paddingStart="10dp"
        android:text="@string/txt_phone"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/address" />

<!--    <TextView-->
<!--        android:id="@+id/btnEdit"-->
<!--        style="@style/MainTheme.Title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:text="Sửa"-->
<!--        android:textColor="@color/blue"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/type" />-->
</androidx.constraintlayout.widget.ConstraintLayout>