<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainTheme.MaxWidth"
    android:orientation="vertical">
    <LinearLayout
        style="@style/MainTheme.MaxWidth"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/txtDeliveryTo"
            style="@style/MainTheme.TextSmall"
            android:text="@string/txtdelivery_to"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/txtAddress"
            style="@style/TextShopName"
            android:layout_width="match_parent"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/txtaddress"
            app:drawableEndCompat="@drawable/ic_next"
            app:drawableStartCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/searchBar"
            style="@style/MainTheme.MaxWidth.SearchBar"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:paddingHorizontal="15dp"
            android:text="@string/txtsearchBar"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:drawableTint="@color/gray" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        style="@style/MainTheme.MaxWidth"
        android:fillViewport="true">

        <LinearLayout
            style="@style/MainTheme.MaxWidth"
            android:background="@color/gray_1"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/sliderBanner"
                style="@style/MainTheme.MaxWidth.SliderView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategory"
                style="@style/MainTheme.MaxWidth"
                android:paddingHorizontal="5dp" />

            <TextView
                style="@style/MainTheme.Title"
                android:layout_marginTop="10dp"
                android:text="@string/txtCollection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCollection"
                style="@style/MainTheme.MaxWidth"
                android:paddingHorizontal="5dp" />

            <ImageView
                android:id="@+id/imgBanner"
                style="@style/MainTheme.MaxWidth"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTabFood"
                style="@style/MainTheme.MaxWidth" />

            <LinearLayout
                android:id="@+id/tabFoodContainer"
                style="@style/MainTheme.MaxWidth"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>