<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainTheme.MaxWidth"
    android:background="@drawable/radius_background"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/orderID"
        style="@style/MainTheme.Title"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:text="#123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/chenfood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderID" />

    <TextView
        android:id="@+id/shopName"
        style="@style/MainTheme.Title"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:text="@string/txt_shop_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image" />

    <TextView
        android:id="@+id/shopAddress"
        style="@style/MainTheme.TextSmall"
        android:text="@string/txtaddress"
        app:layout_constraintStart_toStartOf="@id/shopName"
        app:layout_constraintTop_toBottomOf="@id/shopName" />

    <TextView
        android:id="@+id/price"
        style="@style/MainTheme.Title"
        android:layout_width="wrap_content"
        android:paddingStart="0dp"
        android:text="@string/txt_average_price"
        app:layout_constraintStart_toStartOf="@id/shopName"
        app:layout_constraintTop_toBottomOf="@id/shopAddress" />

    <TextView
        android:id="@+id/count"
        style="@style/MainTheme.Title"
        android:layout_width="wrap_content"
        android:text="(1 phan)"
        android:textColor="@color/gray"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_2"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/status"
        style="@style/MainTheme.Title"
        android:layout_width="wrap_content"
        android:paddingStart="0dp"
        android:text="@string/txt_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/btnReOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline_background"
        android:text="Đặt lại"
        android:textColor="@color/black"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/status" />
</androidx.constraintlayout.widget.ConstraintLayout>